--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
-    <title>Vite + React</title>
+    <title>Droid-Web</title>
   </head>
   <body>
     <div id="root"></div>
